assets/css/_main.scss
/* ... */
body {
	background: var(--background);
	color: var(--text-color);
	transition: background 500ms ease-in-out, color 200ms ease;

	// color: $b-colour;
	font-family: $b-font;
	font-weight: $normal;
	// transition: all 0.3s ease;
	// background-color: $h-colour;
	
}

// os or browser set to dark

@media (prefers-color-scheme: dark) {
	:root {
	  --color-mode: 'dark';
	  --background: var(--color-dark);
	  --text-color: var(--color-light);
	  --icon-mode-transform: var(--icon-mode-day-transform);
	  --button-color: var(--color-dark);

	}
	
	// :root:not([data-user-color-scheme]) {

	// --background: var(--color-dark);
	//  --text-color: var(--color-light);
	//   --button-icon: var(--icontransform
	//   --icon-mode-transform: var(--icon-sun-filter);
	//   --button-background: var(--color-light-alpha);
	//   --border-color: var(--color-light-alpha);


		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a{
			background-clip: border-box;		  
			-webkit-text-fill-color: $a-colour;
			-webkit-background-clip: text;		  
			box-decoration-break: clone;
			// background: -webkit-gradient(linear,left top,right top,from($b-colour),to($b-colour));
			// background: linear-gradient(90deg,$b-colour,$b-colour);
			background-clip: border-box;
			background-clip: border-box;
			-webkit-text-fill-color: $a-colour;
			-webkit-box-decoration-break: clone;
			-webkit-background-clip: text;
			box-decoration-break: clone;
			text-shadow: none;
			transition: all 0.3s ease;
			color: $a-colour !important;
		}

		.main-footer{
			background-color: lighten($color: $b-colour, $amount: 20%);
			color: $a-colour;
		}

		.site-header{
			filter: invert(1);
		}
	// }

}
  
// user has selected dark 
[data-user-color-scheme="dark"] {
	--background: var(--color-dark);
	--text-color: var(--color-light);
	// --button-icon: var(--icon-sun);
	--icon-mode-transform: var(--icon-mode-day-transform);
	// --button-background: var(--color-light-alpha);
	--button-color: var(--color-dark);
	// --border-color: var(--color-light-alpha);

	h1 a, h2 a, h3 a, h4 a, h5 a, h6 a{
		background-clip: border-box;		  
		-webkit-text-fill-color: $a-colour;
		-webkit-background-clip: text;		  
		box-decoration-break: clone;
		// background: -webkit-gradient(linear,left top,right top,from($b-colour),to($b-colour));
		// background: linear-gradient(90deg,$b-colour,$b-colour);
		background-clip: border-box;
		background-clip: border-box;
		-webkit-text-fill-color: $a-colour;
		-webkit-box-decoration-break: clone;
		-webkit-background-clip: text;
		box-decoration-break: clone;
		text-shadow: none;
		transition: all 0.3s ease;
		color: $a-colour !important;
	}

	.main-footer{
		background-color: lighten($color: $b-colour, $amount: 20%);
		color: $a-colour;
	}

	.site-header{
		filter: invert(1);
	}

}

//other prefs

  /* Remove _all_ animations and transitions for people that prefer not to see them */
  @media (prefers-reduced-motion: reduce) {
	body {
	  scroll-behavior: auto;
	}
  
	* {
	  -webkit-animation: none !important;
	  animation: none !important;
	  transition: none !important;
	}
  }
  
  
  /* If there’s no JS, there’s no need for the user toggle component to show */
  .no-js .user-toggle {
	display: none;
  }
  
  .user-toggle {
	// margin: 2rem auto 0 auto;
	// padding-top: 2.5rem;
	// max-width: 20rem;
	text-align: center;	
	position: absolute;
	top: 1.5rem;
	right: 1.5rem;
  }
  
  .toggle-button {
	display: inline-flex;
	// background: var(--button-background);
	color: var(--button-color);
	font: inherit;
	font-size: 1.5rem;
	padding: 0.5rem 1rem;
	border-radius: 100%;
	border: 0.15rem solid;
	transition: background 500ms ease-in-out, color 200ms ease;
  }
  
  .toggle-button__icon {
	background: var(--icon-mode);
	width: 1.2em; 
	height: 1.2em;
	margin: 0.4rem 0;
	transform: var(--icon-mode-transform);
	// transform: var(-icon-transfor);
	// transform: translateY(1px); /* Optical adjustment */
	transition: transform 500ms ease-in-out;
  }
  
  .toggle-button:focus {
	outline: 1px solid var(--button-background);
	outline-offset: 0.5rem;
  }

  .visually-hidden { 
	display: block;
	height: 1px;
	width: 1px;
	overflow: hidden;
	clip: rect(1px 1px 1px 1px);
	clip: rect(1px, 1px, 1px, 1px);
	clip-path: inset(1px);
	white-space: nowrap;
	position: absolute;
  }

